--- a/AuthExample/client/package.json
+++ b/AuthExample/client/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "redux-simple-starter",
+  "name": "auth-example",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test-testing/test_helper.js --recursive ./test-testing",
@@ -26,17 +25,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
-    "react-sparklines": "^1.6.0",
-    "redux": "^3.0.4",
-    "redux-form": "^4.1.3",
-    "redux-promise": "^0.5.3",
-    "youtube-api-search": "0.0.5"
+    "redux": "^3.0.4"
   }
 }
