--- a/BlogExample/package.json
+++ b/BlogExample/package.json
@@ -22,6 +22,7 @@
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.3",
     "react-router": "^2.8.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-form": "^4.2.2",
     "redux-promise": "^0.5.3",
@@ -33,13 +34,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "express": "^4.15.2",
-    //"chai": "^3.5.0",
-    //"chai-jquery": "^2.0.0",
-    //"jquery": "^2.2.1",
-    //"jsdom": "^8.1.0",
-    //"mocha": "^2.4.5",
     "path": "^0.12.7",
-    //"react-addons-test-utils": "^0.14.7",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
